<resources>
    <string name="app_name">Book Land</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sci_fi">Science-Fiction</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_english">English Literature</string>
    <string name="menu_art">Art and Culture</string>
    <string name="menu_comics">Comics</string>
    <string name="menu_self">Self-help</string>
    <string name="menu_map">Google Map</string>
    <string name="menu_send">Send Email</string>
</resources>







